--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-responsive-animate-navbar": "^1.1.8",
